--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Wellcome To</h1>
+            <h1><span class="name-color">Ashraf Shovon</span> World!</h1>
+            <h3>Student | Web Developer</h3>
+            <p>Hello Good People..I am Ashrsf Shovon.I am a student and a web developer.I am from Bangladesh.THis is
+                beautiful country.I love coding.</p>
+            <a class="link-hire" target="_blank" href="www.svn.com">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/svn-bg2.png" alt="shovon">
+        </div>
+    </section>
+
 </body>
+
 </html>
