--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
             <img src="images/svn-bg2.png" alt="shovon">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/svn2-bg.png" alt="ashraf">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, repudiandae eos? Necessitatibus fugiat
+                iste corrupti odio dolore id placeat amet sunt adipisci quasi deserunt temporibus officiis ipsum
+                voluptatum error et, consequatur culpa nostrum. Reprehenderit necessitatibus facilis nisi corrupti,
+                dicta officia!</p>
+            <a class="link-hire" target="_blank" href="www.svn.com">Download Resume</a>
+
+        </div>
+
+    </section>
 
 </body>
 
