--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flex-container">
         <div class="half-width">
             <h1>Wellcome To</h1>
             <h1><span class="name-color">Ashraf Shovon</span> World!</h1>
@@ -26,7 +26,7 @@
             <img src="images/svn-bg2.png" alt="shovon">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flex-container">
         <div class="half-width">
             <img src="images/svn2-bg.png" alt="ashraf">
         </div>
@@ -42,6 +42,32 @@
         </div>
 
     </section>
+    <section class="ex-area">
+        <h1 id="cen">Experiences</h1>
+        <div class="flex-container">
+            <div id="full-ex" class="ex-item">
+                <h2>Full Stake Web Developer</h1>
+                    <h3 class="name-color">2022-Present | Pro Level Developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sunt suscipit dolorem et esse
+                        similique magnam cumque quos alias eligendi odio consequatur, at, quasi praesentium voluptatibus
+                        unde. Minus, unde consectetur? Optio distinctio vitae aliquam suscipit recusandae, quasi facilis
+                        molestiae ea.</p>
+            </div>
+            <div id="web-dev-ex" class="ex-item">
+                <h2>Baby Web Developer</h1>
+                    <h3 class="name-color">2022-2024 | Hero Learner Developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus delectus debitis
+                        aspernatur.
+                        Officia, repellat repellendus dolorum consectetur voluptatum temporibus voluptates soluta culpa
+                        sequi reprehenderit suscipit voluptate, a porro magni eveniet enim, corrupti laboriosam pariatur
+                        esse autem incidunt unde explicabo. Culpa!</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@ashraf2021.A programming hero.</p>
+    </footer>
 
 </body>
 
